In machine_learning_template.ipynb, in EDA > Bivariate EDA section, add subsection for a single scatterplot

--- a/machine_learning_template.ipynb
+++ b/machine_learning_template.ipynb
@@ -1116,6 +1116,36 @@
   },
   {
    "cell_type": "markdown",
+   "id": "54741433-1f70-4248-982e-318bba474e15",
+   "metadata": {},
+   "source": [
+    "#### Scatterplot"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d94309ab-686d-4390-bb41-1d43b728fca5",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Set the figure size\n",
+    "plt.figure(figsize=(8, 6))\n",
+    "\n",
+    "# Create the scatterplot \n",
+    "sns.scatterplot(data=df, x=\"numerical_column_1\", y=\"numerical_column_2\")\n",
+    "\n",
+    "# Add title and axis labels\n",
+    "plt.title(\"Relationship between numerical_column_1 and numerical_column_2\")\n",
+    "plt.xlabel(\"numerical_column_1\")\n",
+    "plt.ylabel(\"numerical_column_2\")\n",
+    "\n",
+    "# Show the plot\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "4a6c0cc0-34f1-4f4c-b8d0-2243ce6f4e4d",
    "metadata": {},
    "source": [
