--- a/machine_learning_template.ipynb
+++ b/machine_learning_template.ipynb
@@ -1293,7 +1293,13 @@
    "id": "e4f4d486-4d2c-4214-a260-ed19c446c41b",
    "metadata": {},
    "source": [
-    "# Train-Validation-Test Split"
+    "# Train-Validation-Test Split  \n",
+    "The ideal split depends on the dataset size and the task. A general guideline is:\n",
+    "\n",
+    "| Dataset Size                | Training Set | Validation Set | Test Set |\n",
+    "|:-----------------------------|--------------|----------------|----------|\n",
+    "| Smaller datasets (<10,000)   | 70%          | 15%            | 15%      |\n",
+    "| Larger datasets (≥10,000)    | 80%          | 10%            | 10%      | "
    ]
   },
   {
@@ -1319,18 +1325,11 @@
     "X_train, X_temp, y_train, y_temp = train_test_split(X, y, test_size=0.3, random_state=42)\n",
     "\n",
     "# Split the temporary data into validation and test sets (50% each)\n",
+    "# Note: This accomplishes a 70% training, 15% validation and 15% test set size\n",
     "X_val, X_test, y_val, y_test = train_test_split(X_temp, y_temp, test_size=0.5, random_state=42)\n",
     "\n",
     "# Delete the temporary data to free up memory\n",
     "del X_temp, y_temp"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "2a88ff08-9c6f-44a6-ba05-74a1bbe9f0e6",
-   "metadata": {},
-   "source": [
-    "Note: This accomplishes a 70% training, 15% validation and 15% test set size."
    ]
   },
   {
