--- a/machine_learning_template.ipynb
+++ b/machine_learning_template.ipynb
@@ -1355,7 +1355,7 @@
     "column_transformer = ColumnTransformer(\n",
     "    transformers=[\n",
     "        (\"scaler\", StandardScaler(), numerical_columns),  # scale numerical columns \n",
-    "        (\"encoder\", OneHotEncoder(drop=None, sparse_output=False), categorical_columns)  # encode categorical columns\n",
+    "        (\"encoder\", OneHotEncoder(drop=\"first\"), categorical_columns)  # encode categorical columns\n",
     "    ],\n",
     "    remainder=\"passthrough\"  # retain boolean columns as-is\n",
     ")\n",
@@ -1707,7 +1707,7 @@
     "    column_transformer = ColumnTransformer(\n",
     "        transformers=[\n",
     "            (\"scaler\", StandardScaler(), numerical_columns),\n",
-    "            (\"encoder\", OneHotEncoder(drop=None, sparse_output=False), categorical_columns)\n",
+    "            (\"encoder\", OneHotEncoder(drop=\"first\"), categorical_columns)\n",
     "        ],\n",
     "        remainder=\"passthrough\"  # Include the boolean columns without transformation\n",
     "    )\n",
