--- a/machine_learning_template.ipynb
+++ b/machine_learning_template.ipynb
@@ -1494,17 +1494,21 @@
    "source": [
     "#### Support Vector Regressor  \n",
     "Hyperparameters including default values:\n",
-    "- `C=1.0`: Regularization parameter, controls the trade-off between reducing error and high model complexity.\n",
-    "- `kernel=\"rbf\"`: Specifies the kernel function used for mapping the input data into a higher-dimensional space. The radial basis function (rbf) kernel is the default.\n",
-    "- `degree=3`: Used only for polynomial kernels (ignored by the RBF kernel). Defines the degree of the polynomial kernel function.\n",
-    "- `gamma=\"scale\"`: Defines how far the influence of a single training example reaches. \"scale\" means `1 / (n_features * X.var())`, which automatically adjusts gamma based on the features.\n",
-    "- `coef0=0.0`: Independent term in polynomial and sigmoid kernel function (ignored by the RBF kernel). \n",
-    "- `tol=1e-3`: The stopping criteria for optimization. If the change in the cost function is less than this tolerance, training stops.\n",
-    "- `cache_size=200`: Defines the size (in MB) of the kernel cache used for the model’s computation. Larger values speed up training, especially for larger datasets.\n",
-    "- `epsilon=0.1`: The margin of tolerance where no penalty is given for points within the margin (important for ε-SVR). A larger value leads to a wider margin and less sensitivity to small changes.\n",
-    "- `shrinking=True`: This parameter enables the shrinking heuristic, which can speed up training by eliminating unnecessary steps during optimization.\n",
-    "- `verbose=False`: Whether to print progress messages during training.\n",
-    "- `max_iter=-1`: Maximum number of iterations during training, -1 means no limit."
+    "\n",
+    "- Model Complexity:\n",
+    "    - `C=1.0`: Regularization parameter, controls the trade-off between reducing error and high model complexity.\n",
+    "    - `epsilon=0.1`: The margin of tolerance where no penalty is given for points within the margin (important for ε-SVR). A larger value leads to a wider margin and less sensitivity to small changes.\n",
+    "- Kernel Configuration:\n",
+    "    - `kernel=\"rbf\"`: Specifies the kernel function used for mapping the input data into a higher-dimensional space. The radial basis function (rbf) kernel is the default.\n",
+    "    - `degree=3`: Used only for polynomial kernels (ignored by the RBF kernel). Defines the degree of the polynomial kernel function.\n",
+    "    - `gamma=\"scale\"`: Defines how far the influence of a single training example reaches. \"scale\" means `1 / (n_features * X.var())`, which automatically adjusts gamma based on the features.\n",
+    "    - `coef0=0.0`: Independent term in polynomial and sigmoid kernel function (ignored by the RBF kernel).\n",
+    "- Training Behavior:\n",
+    "    - `tol=1e-3`: The stopping criteria for optimization. If the change in the cost function is less than this tolerance, training stops.\n",
+    "    - `cache_size=200`: Defines the size (in MB) of the kernel cache used for the model’s computation. Larger values speed up training, especially for larger datasets.\n",
+    "    - `shrinking=True`: This parameter enables the shrinking heuristic, which can speed up training by eliminating unnecessary steps during optimization.\n",
+    "    - `verbose=False`: Whether to print progress messages during training.\n",
+    "    - `max_iter=-1`: Maximum number of iterations during training, -1 means no limit."
    ]
   },
   {
