In machine_learning_template.ipynb, in Modeling > Regression Task > Training Baseline Models > Linear Regression, add hyperparameters explanations as markdown comments

--- a/machine_learning_template.ipynb
+++ b/machine_learning_template.ipynb
@@ -1448,7 +1448,11 @@
    "id": "cb12588e-68c3-4fe3-b858-8ab0fb7b800f",
    "metadata": {},
    "source": [
-    "#### Linear Regression"
+    "#### Linear Regression  \n",
+    "Hyperparameters and default values:\n",
+    "- `fit_intercept=True`: Calculates the intercept; can be set to `False` if data is already centered.\n",
+    "- `n_jobs=None`: Number of CPU threads; use `-1` for all available processors.\n",
+    "- `positive=False`: Forces regression coefficients to be non-negative if set to `True`."
    ]
   },
   {
@@ -1493,7 +1497,7 @@
    "metadata": {},
    "source": [
     "#### Support Vector Regressor  \n",
-    "Hyperparameters including default values:\n",
+    "Hyperparameters and default values:\n",
     "\n",
     "- Model Complexity:\n",
     "    - `C=1.0`: Regularization parameter, controls the trade-off between reducing error and high model complexity.\n",
