In machine_learning_template.ipynb, in Modeling > Regression Task > Training Baseline Models > Random Forest Regressor, initialize model with random_state=42

--- a/machine_learning_template.ipynb
+++ b/machine_learning_template.ipynb
@@ -1585,7 +1585,7 @@
    "outputs": [],
    "source": [
     "# Initialize model\n",
-    "rf = RandomForestRegressor()\n",
+    "rf = RandomForestRegressor(random_state=42)\n",
     "\n",
     "# Train model\n",
     "rf.fit(X_train_transformed, y_train)\n",
