In machine_learning_template.ipynb, in EDA > Defining Column Types section, add subsection headers for manual and programmatic approach

--- a/machine_learning_template.ipynb
+++ b/machine_learning_template.ipynb
@@ -645,8 +645,8 @@
    "id": "b14f5252-3567-42a7-8ef2-13f52c6a4ec6",
    "metadata": {},
    "source": [
-    "Option 1: Manually  \n",
-    "Use this approach for small datasets or when you have specific requirements and need explicit control."
+    "### Manual  \n",
+    "Option 1: Use the manual approach for small datasets or when you have specific requirements and need precise control."
    ]
   },
   {
@@ -678,8 +678,8 @@
    "id": "919c7d33-ac8c-4385-8d16-8bdab200eeed",
    "metadata": {},
    "source": [
-    "Option 2: Programmatically  \n",
-    "Use this approach for large datasets or when you want to automate the process."
+    "### Programmatic  \n",
+    "Option 2: Use the programmatic approach for large datasets or when you need to automate the process, ensuring efficiency and scalability in handling column types."
    ]
   },
   {
