In machine_learning_template.ipynb, in Modeling > Regression Task > Training Baseline Models > Random Forest Regressor, update markdown comments

--- a/machine_learning_template.ipynb
+++ b/machine_learning_template.ipynb
@@ -1561,16 +1561,16 @@
     "- Model Complexity:\n",
     "  - `n_estimators=100`: Number of trees in the forest.  \n",
     "  - `max_depth=None`: Maximum depth of each tree; `None` allows trees to grow until all leaves are pure or minimum samples are reached.  \n",
-    "  - `min_samples_split=2`: Minimum number of samples required to split an internal node.  \n",
-    "  - `min_samples_leaf=1`: Minimum number of samples required to form a leaf node.  \n",
-    "  - `max_features='auto'`: Number of features considered for the best split; default `auto` uses the square root of the total number of features.  \n",
+    "  - `min_samples_split=2`: Minimum number of samples required to split a node.  \n",
+    "  - `min_samples_leaf=1`: Minimum number of samples required at a leaf node.  \n",
+    "  - `max_features='auto'`: Number of features considered for the best split; default `auto` uses the square root of all features.  \n",
     "- Regularization:\n",
     "  - `max_leaf_nodes=None`: Maximum number of leaf nodes per tree.  \n",
     "  - `min_impurity_decrease=0.0`: Splits a node only if it decreases impurity by this threshold.  \n",
     "- Training Behavior:\n",
     "  - `bootstrap=True`: Whether to use bootstrap samples for training each tree.  \n",
     "  - `oob_score=False`: Whether to use out-of-bag samples to estimate prediction accuracy.  \n",
-    "  - `n_jobs=None`: Number of CPU threads; use `-1` for all available processors.  \n",
+    "  - `n_jobs=None`: Number of CPU threads used (`-1` for all processors).  \n",
     "  - `random_state=None`: Random seed for reproducibility.  \n",
     "  - `verbose=0`: Controls the verbosity of output during training.  \n",
     "- Performance Optimization:\n",
