In machine_learning_template.ipynb, in Modeling > Regression Task > Training Baseline Models > Multi-Layer Perceptron Regressor, add hyperparameter explanations as markdown comments

--- a/machine_learning_template.ipynb
+++ b/machine_learning_template.ipynb
@@ -1618,7 +1618,31 @@
    "id": "7dc56c45-c57b-407a-8343-e5217b7d21cf",
    "metadata": {},
    "source": [
-    "#### Multi-Layer Perceptron Regressor"
+    "#### Multi-Layer Perceptron Regressor  \n",
+    "Hyperparameters and default values:  \n",
+    "- Model Architecture:\n",
+    "    - `hidden_layer_sizes=(100,)`: Defines the size and number of hidden layers; `(100,)` indicates one layer with 100 neurons.  \n",
+    "    - `activation=\"relu\"`: Activation function for the hidden layers; options include `\"relu\"`, `\"tanh\"`, `\"logistic\"`, or `\"identity\"`.  \n",
+    "    - `solver=\"adam\"`: Optimization algorithm; options are `\"adam\"` (default), `\"lbfgs\"`, or `\"sgd\"`.  \n",
+    "- Regularization and Learning  \n",
+    "    - `alpha=0.0001`: L2 regularization term to prevent overfitting.  \n",
+    "    - `learning_rate=\"constant\"`: Strategy for learning rate adjustment; options are `\"constant\"`, `\"invscaling\"`, or `\"adaptive\"`.  \n",
+    "    - `learning_rate_init=0.001`: Initial learning rate for weight updates.  \n",
+    "    - `power_t=0.5`: Exponent for inverse scaling of learning rate (used when `learning_rate=\"invscaling\"`).  \n",
+    "- Training Behavior  \n",
+    "    - `max_iter=200`: Maximum number of iterations for training.  \n",
+    "    - `tol=1e-4`: Tolerance for stopping criteria; training stops if loss improvement is below this value.  \n",
+    "    - `momentum=0.9`: Momentum parameter for gradient descent updates (used when `solver=\"sgd\"`).  \n",
+    "    - `n_iter_no_change=10`: Number of iterations with no improvement to stop early.  \n",
+    "    - `early_stopping=False`: Enables early stopping when validation score doesn’t improve.  \n",
+    "- Performance Optimization  \n",
+    "    - `batch_size=\"auto\"`: Number of samples per batch for training; `\"auto\"` uses `min(200, n_samples)`.  \n",
+    "    - `shuffle=True`: Whether to shuffle training data before each epoch.  \n",
+    "    - `random_state=None`: Random seed for reproducibility.  \n",
+    "    - `verbose=False`: Controls verbosity of output during training.  \n",
+    "    - `warm_start=False`: Reuses previous solution to initialize weights for additional fitting.  \n",
+    "    - `beta_1=0.9`, `beta_2=0.999`: Exponential decay rates for moving averages of gradients and squared gradients (used in `solver=\"adam\"`).  \n",
+    "    - `epsilon=1e-8`: Small value to prevent division by zero in `solver=\"adam\"`.  "
    ]
   },
   {
