In machine_learning_template.ipynb, in Modeling > Regression Task > Training Baseline Models > Multi-Layer Perceptron Regressor, add link to offical scikit-learn documentation

--- a/machine_learning_template.ipynb
+++ b/machine_learning_template.ipynb
@@ -1642,7 +1642,9 @@
     "    - `verbose=False`: Controls verbosity of output during training.  \n",
     "    - `warm_start=False`: Reuses previous solution to initialize weights for additional fitting.  \n",
     "    - `beta_1=0.9`, `beta_2=0.999`: Exponential decay rates for moving averages of gradients and squared gradients (used in `solver=\"adam\"`).  \n",
-    "    - `epsilon=1e-8`: Small value to prevent division by zero in `solver=\"adam\"`.  "
+    "    - `epsilon=1e-8`: Small value to prevent division by zero in `solver=\"adam\"`.\n",
+    "\n",
+    "For more details, refer to the official [scikit-learn MLPRegressor documentation](https://scikit-learn.org/stable/modules/generated/sklearn.neural_network.MLPRegressor.html)."
    ]
   },
   {
