In machine_learning_template.ipynb, in Modeling > Regression Task > Training Baseline Models > Random Forest Regressor, add link to offical scikit-learn documentation

--- a/machine_learning_template.ipynb
+++ b/machine_learning_template.ipynb
@@ -1574,7 +1574,9 @@
     "  - `random_state=None`: Random seed for reproducibility.  \n",
     "  - `verbose=0`: Controls the verbosity of output during training.  \n",
     "- Performance Optimization:\n",
-    "  - `max_samples=None`: Maximum number of samples used to train each tree, useful for subsampling large datasets.  "
+    "  - `max_samples=None`: Maximum number of samples used to train each tree, useful for subsampling large datasets.\n",
+    " \n",
+    "For more details, refer to the official [scikit-learn RandomForestRegressor documentation](https://scikit-learn.org/stable/modules/generated/sklearn.ensemble.RandomForestRegressor.html#sklearn.ensemble.RandomForestRegressor).  "
    ]
   },
   {
