In machine_learning_template.ipynb, in Modeling > Regression Task > Training Baseline Models > Support Vector Regressor, add link to offical scikit-learn documentation

--- a/machine_learning_template.ipynb
+++ b/machine_learning_template.ipynb
@@ -1512,7 +1512,9 @@
     "    - `cache_size=200`: Memory (MB) allocated for kernel computation. Larger values speed up training.\n",
     "    - `shrinking=True`: Enables the shrinking heuristic, which can speed up training by eliminating unnecessary steps during optimization.\n",
     "    - `verbose=False`: Whether to print progress messages during training.\n",
-    "    - `max_iter=-1`: Maximum number of iterations during training (`-1` for no limit)."
+    "    - `max_iter=-1`: Maximum number of iterations during training (`-1` for no limit).\n",
+    "\n",
+    "For more details, refer to the official [scikit-learn SVR documentation](https://scikit-learn.org/stable/modules/generated/sklearn.svm.SVR.html#sklearn.svm.SVR).  "
    ]
   },
   {
