In machine_learning_template.ipynb, in Modeling > Regression Task > Training Baseline Models > Linear Regression, add link to offical scikit-learn documentation

--- a/machine_learning_template.ipynb
+++ b/machine_learning_template.ipynb
@@ -1452,7 +1452,9 @@
     "Hyperparameters and default values:\n",
     "- `fit_intercept=True`: Calculates the intercept; can be set to `False` if data is already centered.\n",
     "- `n_jobs=None`: Number of CPU threads; use `-1` for all available processors.\n",
-    "- `positive=False`: Forces regression coefficients to be non-negative if set to `True`."
+    "- `positive=False`: Forces regression coefficients to be non-negative if set to `True`.\n",
+    "\n",
+    "For more details, refer to the official [scikit-learn LinearRegression documentation](https://scikit-learn.org/stable/modules/generated/sklearn.linear_model.LinearRegression.html#sklearn.linear_model.LinearRegression).  "
    ]
   },
   {
