In machine_learning_template.ipynb, in Modeling > Regression Task > Training Baseline Models > MLP Regressor, add random_state=42 when initializing the model

--- a/machine_learning_template.ipynb
+++ b/machine_learning_template.ipynb
@@ -1661,7 +1661,7 @@
    "outputs": [],
    "source": [
     "# Initialize model\n",
-    "mlp = MLPRegressor()\n",
+    "mlp = MLPRegressor(random_state=42)\n",
     "\n",
     "# Train model\n",
     "mlp.fit(X_train_transformed, y_train)\n",
