--- a/machine_learning_template.ipynb
+++ b/machine_learning_template.ipynb
@@ -1630,18 +1630,18 @@
     "    - `hidden_layer_sizes=(100,)`: Defines the size and number of hidden layers; `(100,)` indicates one layer with 100 neurons.  \n",
     "    - `activation=\"relu\"`: Activation function for the hidden layers; options include `\"relu\"`, `\"tanh\"`, `\"logistic\"`, or `\"identity\"`.  \n",
     "    - `solver=\"adam\"`: Optimization algorithm; options are `\"adam\"` (default), `\"lbfgs\"`, or `\"sgd\"`.  \n",
-    "- Regularization and Learning  \n",
+    "- Regularization and Learning:  \n",
     "    - `alpha=0.0001`: L2 regularization term to prevent overfitting.  \n",
     "    - `learning_rate=\"constant\"`: Strategy for learning rate adjustment; options are `\"constant\"`, `\"invscaling\"`, or `\"adaptive\"`.  \n",
     "    - `learning_rate_init=0.001`: Initial learning rate for weight updates.  \n",
     "    - `power_t=0.5`: Exponent for inverse scaling of learning rate (used when `learning_rate=\"invscaling\"`).  \n",
-    "- Training Behavior  \n",
+    "- Training Behavior:  \n",
     "    - `max_iter=200`: Maximum number of iterations for training.  \n",
     "    - `tol=1e-4`: Tolerance for stopping criteria; training stops if loss improvement is below this value.  \n",
     "    - `momentum=0.9`: Momentum parameter for gradient descent updates (used when `solver=\"sgd\"`).  \n",
     "    - `n_iter_no_change=10`: Number of iterations with no improvement to stop early.  \n",
     "    - `early_stopping=False`: Enables early stopping when validation score doesn’t improve.  \n",
-    "- Performance Optimization  \n",
+    "- Performance Optimization:  \n",
     "    - `batch_size=\"auto\"`: Number of samples per batch for training; `\"auto\"` uses `min(200, n_samples)`.  \n",
     "    - `shuffle=True`: Whether to shuffle training data before each epoch.  \n",
     "    - `random_state=None`: Random seed for reproducibility.  \n",
@@ -1694,7 +1694,36 @@
    "id": "2e9d9b1d-e7c0-45fb-a908-008c8c706590",
    "metadata": {},
    "source": [
-    "#### XGBoost Regressor"
+    "#### XGBoost Regressor  \n",
+    "Hyperparameters and default values:  \n",
+    "- Model Complexity:  \n",
+    "    - `n_estimators=100`: Number of trees.  \n",
+    "    - `max_depth=6`: Maximum depth of each tree.  \n",
+    "    - `learning_rate=0.3`: Step size shrinking to prevent overfitting.  \n",
+    "    - `subsample=1.0`: Fraction of samples used for each tree.  \n",
+    "    - `colsample_bytree=1.0`: Fraction of features used for each tree.  \n",
+    "    - `colsample_bylevel=1.0`: Fraction of features used at each tree level.  \n",
+    "    - `colsample_bynode=1.0`: Fraction of features used at each node.  \n",
+    "- Regularization and Learning:  \n",
+    "    - `gamma=0`: Minimum loss reduction required to make a further partition on a leaf node.  \n",
+    "    - `min_child_weight=1`: Minimum sum of instance weight (hessian) in a child.  \n",
+    "    - `scale_pos_weight=1`: Controls the balance of positive and negative weights; used for imbalanced datasets.  \n",
+    "- Training Behavior:  \n",
+    "    - `objective=\"reg:squarederror\"`: Objective function for regression; default is for squared error.  \n",
+    "    - `booster=\"gbtree\"`: Booster type; options include `\"gbtree\"` (default), `\"gblinear\"`, and `\"dart\"`.  \n",
+    "    - `tree_method=\"auto\"`: Tree construction algorithm; `\"auto\"` chooses based on system configuration. Options include `\"exact\"`, `\"approx\"`, and `\"hist\"`.  \n",
+    "    - `eval_metric=\"rmse\"`: Metric used for validation during training; default is root mean square error (`rmse`).  \n",
+    "- Performance Optimization:  \n",
+    "    - `early_stopping_rounds=None`: Stops training if validation metric does not improve after specified rounds.  \n",
+    "    - `n_jobs=1`: Number of threads used for parallel computation (`-1` for all processors).  \n",
+    "    - `random_state=None`: Seed for reproducibility.  \n",
+    "    - `verbose=1`: Verbosity level for training output; 0 for silent, higher values show more details.  \n",
+    "- Advanced Parameters:  \n",
+    "    - `lambda=1`: L2 regularization term on weights.  \n",
+    "    - `alpha=0`: L1 regularization term on weights.  \n",
+    "    - `max_delta_step=0`: Used to help with convergence in highly imbalanced datasets.\n",
+    "\n",
+    "For more details, refer to the official [XGBoost documentation](https://xgboost.readthedocs.io/en/latest/parameter.html)."
    ]
   },
   {
