In machine_learning_template.ipynb, in Modeling > Regression Task > Training Baseline Models > XGBoost Regressor, add random_state=42

--- a/machine_learning_template.ipynb
+++ b/machine_learning_template.ipynb
@@ -34,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 30,
    "id": "100528be-33fb-4f95-b8f8-e791de38fe6f",
    "metadata": {},
    "outputs": [],
@@ -1700,7 +1700,7 @@
     "    - `n_estimators=100`: Number of trees.  \n",
     "    - `max_depth=6`: Maximum depth of each tree.  \n",
     "    - `learning_rate=0.3`: Step size shrinking to prevent overfitting.  \n",
-    "    - `subsample=1.0`: Fraction of samples used for each tree.  \n",
+    "    - `subsample=1.0`: Fraction of training samples used for each tree.  \n",
     "    - `colsample_bytree=1.0`: Fraction of features used for each tree.  \n",
     "    - `colsample_bylevel=1.0`: Fraction of features used at each tree level.  \n",
     "    - `colsample_bynode=1.0`: Fraction of features used at each node.  \n",
@@ -1734,7 +1734,7 @@
    "outputs": [],
    "source": [
     "# Initialize model\n",
-    "xgb = XGBRegressor()\n",
+    "xgb = XGBRegressor(random_state=42)\n",
     "\n",
     "# Train model\n",
     "xgb.fit(X_train_transformed, y_train)\n",
