In machine_learning_template.ipynb, in Modeling > Regression Task > Training Baseline Models (Pipeline), add random_state=42 for random forest, mlp, and xgboost

--- a/machine_learning_template.ipynb
+++ b/machine_learning_template.ipynb
@@ -1789,7 +1789,7 @@
    "outputs": [],
    "source": [
     "# Define models with baseline configurations\n",
-    "models = [LinearRegression(), SVR(C=100), RandomForestRegressor(), MLPRegressor(max_iter=1000), XGBRegressor()]\n",
+    "models = [LinearRegression(), SVR(), RandomForestRegressor(random_state=42), MLPRegressor(random_state=42), XGBRegressor(random_state=42)]\n",
     "\n",
     "# Create lists for storing the evaluation metrics (RMSE, MAPE, R2) of each model \n",
     "rmse_ls = []\n",
