--- a/machine_learning_template.ipynb
+++ b/machine_learning_template.ipynb
@@ -34,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": null,
    "id": "100528be-33fb-4f95-b8f8-e791de38fe6f",
    "metadata": {},
    "outputs": [],
@@ -1859,10 +1859,26 @@
    "metadata": {},
    "source": [
     "#### Random Forest Regressor  \n",
-    "**Hyperparameters**:\n",
-    "- **`n_estimators`**: Number of trees in the forest.\n",
-    "- **`max_depth`**: Maximum depth of each tree.\n",
-    "- **`max_features`**: Proportion of features to consider for each split. Values range from 0.0 (none) to 1.0 (all features). For example, 0.5 means 50% of the features are considered at each split. "
+    "Hyperparameters and default values:\n",
+    "- Model Complexity:\n",
+    "  - `n_estimators=100`: Number of trees in the forest.  \n",
+    "  - `max_depth=None`: Maximum depth of each tree; `None` allows trees to grow until all leaves are pure or minimum samples are reached.  \n",
+    "  - `min_samples_split=2`: Minimum number of samples required to split a node.  \n",
+    "  - `min_samples_leaf=1`: Minimum number of samples required at a leaf node.  \n",
+    "  - `max_features='auto'`: Number of features considered for the best split; default `auto` uses the square root of all features.  \n",
+    "- Regularization:\n",
+    "  - `max_leaf_nodes=None`: Maximum number of leaf nodes per tree.  \n",
+    "  - `min_impurity_decrease=0.0`: Splits a node only if it decreases impurity by this threshold.  \n",
+    "- Training Behavior:\n",
+    "  - `bootstrap=True`: Whether to use bootstrap samples for training each tree.  \n",
+    "  - `oob_score=False`: Whether to use out-of-bag samples to estimate prediction accuracy.  \n",
+    "  - `n_jobs=None`: Number of CPU threads used (`-1` for all processors).  \n",
+    "  - `random_state=None`: Random seed for reproducibility.  \n",
+    "  - `verbose=0`: Controls the verbosity of output during training.  \n",
+    "- Performance Optimization:\n",
+    "  - `max_samples=None`: Maximum number of samples used to train each tree, useful for subsampling large datasets.\n",
+    " \n",
+    "For more details, refer to the official [scikit-learn RandomForestRegressor documentation](https://scikit-learn.org/stable/modules/generated/sklearn.ensemble.RandomForestRegressor.html#sklearn.ensemble.RandomForestRegressor).  "
    ]
   },
   {
