In machine_learning_template.ipynb, in Modeling > Regression Task > Hyperparameter Tuning > Random Forest Regressor, update parameter grid values

--- a/machine_learning_template.ipynb
+++ b/machine_learning_template.ipynb
@@ -1865,7 +1865,7 @@
     "  - `max_depth=None`: Maximum depth of each tree; `None` allows trees to grow until all leaves are pure or minimum samples are reached.  \n",
     "  - `min_samples_split=2`: Minimum number of samples required to split a node.  \n",
     "  - `min_samples_leaf=1`: Minimum number of samples required at a leaf node.  \n",
-    "  - `max_features='auto'`: Number of features considered for the best split; default `auto` uses the square root of all features.  \n",
+    "  - `max_features=\"auto\"`: Number of features considered for the best split; default `auto` uses the square root of all features.  \n",
     "- Regularization:\n",
     "  - `max_leaf_nodes=None`: Maximum number of leaf nodes per tree.  \n",
     "  - `min_impurity_decrease=0.0`: Splits a node only if it decreases impurity by this threshold.  \n",
@@ -1877,8 +1877,15 @@
     "  - `verbose=0`: Controls the verbosity of output during training.  \n",
     "- Performance Optimization:\n",
     "  - `max_samples=None`: Maximum number of samples used to train each tree, useful for subsampling large datasets.\n",
-    " \n",
-    "For more details, refer to the official [scikit-learn RandomForestRegressor documentation](https://scikit-learn.org/stable/modules/generated/sklearn.ensemble.RandomForestRegressor.html#sklearn.ensemble.RandomForestRegressor).  "
+    "\n",
+    "For more details, refer to the official [scikit-learn RandomForestRegressor documentation](https://scikit-learn.org/stable/modules/generated/sklearn.ensemble.RandomForestRegressor.html#sklearn.ensemble.RandomForestRegressor).  \n",
+    "\n",
+    "The following hyperparameters are typically the most impactful:\n",
+    "- `n_estimators`\n",
+    "- `max_depth`  \n",
+    "- `min_samples_split`\n",
+    "- `min_samples_leaf`\n",
+    "- `max_features`"
    ]
   },
   {
@@ -1893,9 +1900,11 @@
     "\n",
     "# Define hyperparameter grid \n",
     "rf_param_grid = {\n",
-    "    \"n_estimators\": [200, 300, 400, 500],               \n",
-    "    \"max_depth\": [20, 30, 40, 50],              \n",
-    "    \"max_features\": [0.33, 0.5, 0.66, 1]                \n",
+    "    \"n_estimators\": [100, 200, 500],               \n",
+    "    \"max_depth\": [None, 10, 20],              \n",
+    "    \"min_samples_split\": [2, 5],\n",
+    "    \"min_samples_leaf\": [1, 2],\n",
+    "    \"max_features\": [0.33, 0.66, 1]                \n",
     "}\n",
     "\n",
     "# Initialize grid search object\n",
