--- a/machine_learning_template.ipynb
+++ b/machine_learning_template.ipynb
@@ -1921,6 +1921,85 @@
   },
   {
    "cell_type": "markdown",
+   "id": "52b61928-a213-4474-a934-17684a2d041e",
+   "metadata": {},
+   "source": [
+    "#### XGBoost Regressor  \n",
+    "Hyperparameters and default values:  \n",
+    "- Model Complexity:  \n",
+    "    - `n_estimators=100`: Number of trees.  \n",
+    "    - `max_depth=6`: Maximum depth of each tree.  \n",
+    "    - `learning_rate=0.3`: Step size shrinking to prevent overfitting.  \n",
+    "    - `subsample=1.0`: Fraction of training samples used for each tree.  \n",
+    "    - `colsample_bytree=1.0`: Fraction of features used for each tree.  \n",
+    "    - `colsample_bylevel=1.0`: Fraction of features used at each tree level.  \n",
+    "    - `colsample_bynode=1.0`: Fraction of features used at each node.  \n",
+    "- Regularization and Learning:  \n",
+    "    - `gamma=0`: Minimum loss reduction required to make a further partition on a leaf node.  \n",
+    "    - `min_child_weight=1`: Minimum sum of instance weight (hessian) in a child.  \n",
+    "    - `scale_pos_weight=1`: Controls the balance of positive and negative weights; used for imbalanced datasets.  \n",
+    "- Training Behavior:  \n",
+    "    - `objective=\"reg:squarederror\"`: Objective function for regression; default is for squared error.  \n",
+    "    - `booster=\"gbtree\"`: Booster type; options include `\"gbtree\"` (default), `\"gblinear\"`, and `\"dart\"`.  \n",
+    "    - `tree_method=\"auto\"`: Tree construction algorithm; `\"auto\"` chooses based on system configuration. Options include `\"exact\"`, `\"approx\"`, and `\"hist\"`.  \n",
+    "    - `eval_metric=\"rmse\"`: Metric used for validation during training; default is root mean square error (`rmse`).  \n",
+    "- Performance Optimization:  \n",
+    "    - `early_stopping_rounds=None`: Stops training if validation metric does not improve after specified rounds.  \n",
+    "    - `n_jobs=1`: Number of threads used for parallel computation (`-1` for all processors).  \n",
+    "    - `random_state=None`: Seed for reproducibility.  \n",
+    "    - `verbose=1`: Verbosity level for training output; 0 for silent, higher values show more details.  \n",
+    "- Advanced Parameters:  \n",
+    "    - `lambda=1`: L2 regularization term on weights.  \n",
+    "    - `alpha=0`: L1 regularization term on weights.  \n",
+    "    - `max_delta_step=0`: Used to help with convergence in highly imbalanced datasets.\n",
+    "\n",
+    "For more details, refer to the official [XGBoost documentation](https://xgboost.readthedocs.io/en/latest/parameter.html).\n",
+    "\n",
+    "The following hyperparameters are typically the most impactful:\n",
+    "- `n_estimators`\n",
+    "- `max_depth` \n",
+    "- `learning_rate`\n",
+    "- `subsample` \n",
+    "- `colsample_bytree`\n",
+    "- `gamma`\n",
+    "- `min_child_weight`"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ae7f58f8-0c05-4a19-a851-ed03d87bc056",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Initialize model\n",
+    "xgb = XGBRegressor(random_state=42)\n",
+    "\n",
+    "# Define hyperparameter grid \n",
+    "xgb_param_grid = {\n",
+    "    \"n_estimators\": [100, 200, 300, 500],               \n",
+    "    \"max_depth\": [3, 6, 10], \n",
+    "    \"learning_rate\": [0.01, 0.1, 0.2],\n",
+    "    \"subsample\": [0.6, 0.8, 1.0],\n",
+    "    \"colsample_bytree\": [0.6, 0.8, 1.0],  \n",
+    "    \"gamma\": [0, 0.1, 0.2],           \n",
+    "    \"min_child_weight\": [1, 3, 5]\n",
+    "}\n",
+    "\n",
+    "# Initialize grid search object\n",
+    "xgb_grid_search = GridSearchCV(\n",
+    "    estimator=xgb,\n",
+    "    param_grid=xgb_param_grid, \n",
+    "    cv=5, \n",
+    "    scoring=\"neg_root_mean_squared_error\"  # use \"r2\" for R-squared or a custom function for MAPE\n",
+    ")\n",
+    "\n",
+    "# Fit the grid search to the training data\n",
+    "xgb_grid_search.fit(X_train_transformed, y_train)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "e482eca8-6853-44dc-ad83-7f4b4e5a31f8",
    "metadata": {},
    "source": [
