--- a/machine_learning_template.ipynb
+++ b/machine_learning_template.ipynb
@@ -1920,6 +1920,33 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "7601be53-7d15-48ca-9321-6915b90511e1",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# DataFrame of grid search results \n",
+    "rf_grid_search_results = pd.DataFrame({\n",
+    "    \"validation_rmse\": -1 * rf_grid_search.cv_results_[\"mean_test_score\"],  # RMSE on validation data\n",
+    "    \"parameters\": rf_grid_search.cv_results_[\"params\"]  # parameter values\n",
+    "}) \n",
+    "\n",
+    "# Extract each parameter as a separate column\n",
+    "rf_grid_search_results[\"n_estimators\"] = rf_grid_search_results[\"parameters\"].apply(lambda x: x[\"n_estimators\"])\n",
+    "rf_grid_search_results[\"max_depth\"] = rf_grid_search_results[\"parameters\"].apply(lambda x: x[\"max_depth\"])\n",
+    "rf_grid_search_results[\"min_samples_split\"] = rf_grid_search_results[\"parameters\"].apply(lambda x: x[\"min_samples_split\"])\n",
+    "rf_grid_search_results[\"min_samples_leaf\"] = rf_grid_search_results[\"parameters\"].apply(lambda x: x[\"min_samples_leaf\"])\n",
+    "rf_grid_search_results[\"max_features\"] = rf_grid_search_results[\"parameters\"].apply(lambda x: x[\"max_features\"])\n",
+    "\n",
+    "# Delete the parameters column\n",
+    "rf_grid_search_results = rf_grid_search_results.drop(\"parameters\", axis=1)\n",
+    "\n",
+    "# Show the top 10 best performing models\n",
+    "rf_grid_search_results.sort_values(\"validation_rmse\")[:10]"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "52b61928-a213-4474-a934-17684a2d041e",
    "metadata": {},
