--- a/machine_learning_template.ipynb
+++ b/machine_learning_template.ipynb
@@ -2026,6 +2026,35 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "8358dfa5-5366-495d-89fe-f76611299e83",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# DataFrame of grid search results \n",
+    "xgb_grid_search_results = pd.DataFrame({\n",
+    "    \"validation_rmse\": -1 * xgb_grid_search.cv_results_[\"mean_test_score\"],  # RMSE on validation data\n",
+    "    \"parameters\": xgb_grid_search.cv_results_[\"params\"]  # parameter values\n",
+    "}) \n",
+    "\n",
+    "# Extract each parameter as a separate column\n",
+    "xgb_grid_search_results[\"n_estimators\"] = xgb_grid_search_results[\"parameters\"].apply(lambda x: x[\"n_estimators\"])\n",
+    "xgb_grid_search_results[\"max_depth\"] = xgb_grid_search_results[\"parameters\"].apply(lambda x: x[\"max_depth\"])\n",
+    "xgb_grid_search_results[\"learning_rate\"] = xgb_grid_search_results[\"parameters\"].apply(lambda x: x[\"learning_rate\"])\n",
+    "xgb_grid_search_results[\"subsample\"] = xgb_grid_search_results[\"parameters\"].apply(lambda x: x[\"subsample\"])\n",
+    "xgb_grid_search_results[\"colsample_bytree\"] = xgb_grid_search_results[\"parameters\"].apply(lambda x: x[\"colsample_bytree\"])\n",
+    "xgb_grid_search_results[\"gamma\"] = xgb_grid_search_results[\"parameters\"].apply(lambda x: x[\"gamma\"])\n",
+    "xgb_grid_search_results[\"min_child_weight\"] = xgb_grid_search_results[\"parameters\"].apply(lambda x: x[\"min_child_weight\"])\n",
+    "\n",
+    "# Delete the parameters column\n",
+    "xgb_grid_search_results = xgb_grid_search_results.drop(\"parameters\", axis=1)\n",
+    "\n",
+    "# Show the top 10 best performing models\n",
+    "xgb_grid_search_results.sort_values(\"validation_rmse\")[:10]"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "e482eca8-6853-44dc-ad83-7f4b4e5a31f8",
    "metadata": {},
