In machine_learning_template.ipynb, in Modeling > Regression Task, add subsection Final Model with code for training final model

--- a/machine_learning_template.ipynb
+++ b/machine_learning_template.ipynb
@@ -2056,6 +2056,56 @@
   },
   {
    "cell_type": "markdown",
+   "id": "bef98c90-8aca-4cea-abae-91730047696c",
+   "metadata": {},
+   "source": [
+    "### Final Model  \n",
+    "Based on hyperparameter tuning, the following model achieved the lowest RMSE (e.g., 12.34) on the validation data compared to other candidates, making it the optimal choice for the final model. This model will be further evaluated on test data to confirm its generalizability.\n",
+    "\n",
+    "Example: XGBoost Regressor with the following hyperparameters:\n",
+    "- `n_estimators=300`\n",
+    "- `max_depth=4` \n",
+    "- `learning_rate=0.1`\n",
+    "- `subsample=0.8` \n",
+    "- `colsample_bytree=0.8`\n",
+    "- `gamma=0.1`\n",
+    "- `min_child_weight=3`\n",
+    "- `random_state=42`"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "fbb70149-6fda-49df-a20b-10130e193888",
+   "metadata": {},
+   "source": [
+    "#### Training Final Model"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c50760a6-e090-4481-8eea-223a0c5d1c2e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Initialize model\n",
+    "xgb_final_model = XGBRegressor(\n",
+    "    n_estimators=300, \n",
+    "    max_depth=4, \n",
+    "    learning_rate=0.1,\n",
+    "    subsample=0.8, \n",
+    "    colsample_bytree=0.8, \n",
+    "    gamma=0.1,\n",
+    "    min_child_weight=3, \n",
+    "    random_state=42\n",
+    ")\n",
+    "\n",
+    "# Train model\n",
+    "xgb_final_model.fit(X_train_transformed, y_train)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "e482eca8-6853-44dc-ad83-7f4b4e5a31f8",
    "metadata": {},
    "source": [
