In machine_learning_template.ipynb, in Modeling > Regression Task > Final Model, add subsection for model evaluation

--- a/machine_learning_template.ipynb
+++ b/machine_learning_template.ipynb
@@ -2106,6 +2106,27 @@
   },
   {
    "cell_type": "markdown",
+   "id": "d5419d06-3048-4ae6-a9a0-f92eea024c99",
+   "metadata": {},
+   "source": [
+    "#### Model Evaluation"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d65d565f-4c82-430f-89e3-cf03f326696f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Predict on the training, validation and test data\n",
+    "y_train_pred = xgb_final_model.predict(X_train_transformed)\n",
+    "y_val_pred = xgb_final_model.predict(X_val_transformed)\n",
+    "y_test_pred = xgb_final_model.predict(X_test_transformed)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "e482eca8-6853-44dc-ad83-7f4b4e5a31f8",
    "metadata": {},
    "source": [
