In machine_learning_template.ipynb, in Feature Scaling and Encoding section, add code to apply column transformer to test data

--- a/machine_learning_template.ipynb
+++ b/machine_learning_template.ipynb
@@ -1363,8 +1363,9 @@
     "# Fit the column transformer to the training data and apply transformations\n",
     "X_train_transformed = column_transformer.fit_transform(X_train)\n",
     "\n",
-    "# Apply the same transformations to the validation data\n",
-    "X_val_transformed = column_transformer.transform(X_val)"
+    "# Apply the same transformations to the validation and test data\n",
+    "X_val_transformed = column_transformer.transform(X_val)\n",
+    "X_test_transformed = column_transformer.transform(X_test)"
    ]
   },
   {
