--- a/machine_learning_template.ipynb
+++ b/machine_learning_template.ipynb
@@ -2061,9 +2061,10 @@
    "metadata": {},
    "source": [
     "### Final Model  \n",
-    "Based on hyperparameter tuning, the following model achieved the lowest RMSE (e.g., 12.34) on the validation data compared to other candidates, making it the optimal choice for the final model. This model will be further evaluated on test data to confirm its generalizability.\n",
+    "Based on hyperparameter tuning, the following model achieved the best performance (e.g., RMSE = 12.34) on the validation data compared to other candidates, making it the optimal choice for the final model. This model will be further evaluated on the test data to confirm its generalizability.\n",
     "\n",
-    "Example: XGBoost Regressor with the following hyperparameters:\n",
+    "Example final model: XGBoost Regressor  \n",
+    "Selected hyperparameters:\n",
     "- `n_estimators=300`\n",
     "- `max_depth=4` \n",
     "- `learning_rate=0.1`\n",
