In machine_learning_template.ipynb, in Modeling > Regression > Final Model section, rename xgb_final_model to xgb

--- a/machine_learning_template.ipynb
+++ b/machine_learning_template.ipynb
@@ -2091,7 +2091,7 @@
    "outputs": [],
    "source": [
     "# Initialize model\n",
-    "xgb_final_model = XGBRegressor(\n",
+    "xgb = XGBRegressor(\n",
     "    n_estimators=300, \n",
     "    max_depth=4, \n",
     "    learning_rate=0.1,\n",
@@ -2103,7 +2103,7 @@
     ")\n",
     "\n",
     "# Train model\n",
-    "xgb_final_model.fit(X_train_transformed, y_train)"
+    "xgb.fit(X_train_transformed, y_train)"
    ]
   },
   {
@@ -2122,9 +2122,9 @@
    "outputs": [],
    "source": [
     "# Predict on the training, validation and test data\n",
-    "y_train_pred = xgb_final_model.predict(X_train_transformed)\n",
-    "y_val_pred = xgb_final_model.predict(X_val_transformed)\n",
-    "y_test_pred = xgb_final_model.predict(X_test_transformed)"
+    "y_train_pred = xgb.predict(X_train_transformed)\n",
+    "y_val_pred = xgb.predict(X_val_transformed)\n",
+    "y_test_pred = xgb.predict(X_test_transformed)"
    ]
   },
   {
