In machine_learning_template.ipynb, in Modeling > Regression > Final Model > Model Evaluation, calculate evaluation metrics and show as results table

--- a/machine_learning_template.ipynb
+++ b/machine_learning_template.ipynb
@@ -2124,7 +2124,29 @@
     "# Predict on the training, validation and test data\n",
     "y_train_pred = xgb.predict(X_train_transformed)\n",
     "y_val_pred = xgb.predict(X_val_transformed)\n",
-    "y_test_pred = xgb.predict(X_test_transformed)"
+    "y_test_pred = xgb.predict(X_test_transformed)\n",
+    "\n",
+    "# Evaluate model\n",
+    "train_rmse = mean_squared_error(y_train, y_train_pred, squared=False)\n",
+    "val_rmse = mean_squared_error(y_val, y_val_pred, squared=False)\n",
+    "test_rmse = mean_squared_error(y_test, y_test_pred, squared=False)\n",
+    "train_mape = mean_absolute_percentage_error(y_train, y_train_pred)\n",
+    "val_mape = mean_absolute_percentage_error(y_val, y_val_pred)\n",
+    "test_mape = mean_absolute_percentage_error(y_test, y_test_pred)\n",
+    "train_r2 = r2_score(y_train, y_train_pred)\n",
+    "val_r2 = r2_score(y_val, y_val_pred)\n",
+    "test_r2 = r2_score(y_test, y_test_pred)\n",
+    "\n",
+    "# Create table of evaluation metrics\n",
+    "xgb_evaluation = pd.DataFrame({\n",
+    "    \"Metric\": [\"RMSE\", \"MAPE\", \"R-squared\"],\n",
+    "    \"Training\": [train_rmse, train_mape, train_r2],\n",
+    "    \"Validation\": [val_rmse, val_mape, val_r2],\n",
+    "    \"Test\": [test_rmse, test_mape, test_r2]\n",
+    "})\n",
+    "\n",
+    "# Show evaluation metrics\n",
+    "print(xgb_evaluation.round(2))  # round metrics to 2 decimals"
    ]
   },
   {
