In machine_learning_template.ipynb, in Modeling > Regression > Final Model > Model Evaluation, add residual plots for validation and test data

--- a/machine_learning_template.ipynb
+++ b/machine_learning_template.ipynb
@@ -2150,6 +2150,28 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "00b15d30-b95b-4499-ac84-2124b938669d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Resiudal plots for validation data\n",
+    "plot_residuals(y_val, y_val_pred)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "0aec2f02-1f58-4004-8a56-82e43e7e460b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Resiudal plots for tets data\n",
+    "plot_residuals(y_test, y_test_pred)"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "e482eca8-6853-44dc-ad83-7f4b4e5a31f8",
    "metadata": {},
