In machine_learning_template.ipynb, in Modeling > Regression > Final Model, add subsection for saving model

--- a/machine_learning_template.ipynb
+++ b/machine_learning_template.ipynb
@@ -2173,6 +2173,31 @@
   },
   {
    "cell_type": "markdown",
+   "id": "661472f1-6c53-4270-a381-f96641708735",
+   "metadata": {},
+   "source": [
+    "#### Saving Model  \n",
+    "Save both the column transformer and the final model as pickle files in the `models` directory for later use."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "7d5bf3c1-3bc1-47a4-8c78-9ecf3052c1a0",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Save column transformer \n",
+    "with open(\"models/column_transformer.pkl\", \"wb\") as file:\n",
+    "    pickle.dump(column_transformer, file)\n",
+    "\n",
+    "# Save final model\n",
+    "with open(\"models/final_model.pkl\", \"wb\") as file:\n",
+    "    pickle.dump(xgb, file)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "e482eca8-6853-44dc-ad83-7f4b4e5a31f8",
    "metadata": {},
    "source": [
