--- a/machine_learning_template.ipynb
+++ b/machine_learning_template.ipynb
@@ -53,7 +53,8 @@
     "from sklearn.svm import SVR\n",
     "from sklearn.ensemble import RandomForestRegressor\n",
     "from sklearn.neural_network import MLPRegressor\n",
-    "import xgboost as xgb"
+    "import xgboost as xgb\n",
+    "import pickle"
    ]
   },
   {
