In machine_learning_template.ipynb, in Modeling > Regression > Final Model, rename xgb with final_model throughout the section

--- a/machine_learning_template.ipynb
+++ b/machine_learning_template.ipynb
@@ -2092,7 +2092,7 @@
    "outputs": [],
    "source": [
     "# Initialize model\n",
-    "xgb = XGBRegressor(\n",
+    "final_model = XGBRegressor(\n",
     "    n_estimators=300, \n",
     "    max_depth=4, \n",
     "    learning_rate=0.1,\n",
@@ -2104,7 +2104,7 @@
     ")\n",
     "\n",
     "# Train model\n",
-    "xgb.fit(X_train_transformed, y_train)"
+    "final_model.fit(X_train_transformed, y_train)"
    ]
   },
   {
@@ -2123,9 +2123,9 @@
    "outputs": [],
    "source": [
     "# Predict on the training, validation and test data\n",
-    "y_train_pred = xgb.predict(X_train_transformed)\n",
-    "y_val_pred = xgb.predict(X_val_transformed)\n",
-    "y_test_pred = xgb.predict(X_test_transformed)\n",
+    "y_train_pred = final_model.predict(X_train_transformed)\n",
+    "y_val_pred = final_model.predict(X_val_transformed)\n",
+    "y_test_pred = final_model.predict(X_test_transformed)\n",
     "\n",
     "# Evaluate model\n",
     "train_rmse = mean_squared_error(y_train, y_train_pred, squared=False)\n",
@@ -2139,7 +2139,7 @@
     "test_r2 = r2_score(y_test, y_test_pred)\n",
     "\n",
     "# Create table of evaluation metrics\n",
-    "xgb_evaluation = pd.DataFrame({\n",
+    "final_model_evaluation = pd.DataFrame({\n",
     "    \"Metric\": [\"RMSE\", \"MAPE\", \"R-squared\"],\n",
     "    \"Training\": [train_rmse, train_mape, train_r2],\n",
     "    \"Validation\": [val_rmse, val_mape, val_r2],\n",
@@ -2147,7 +2147,7 @@
     "})\n",
     "\n",
     "# Show evaluation metrics\n",
-    "print(xgb_evaluation.round(2))  # round metrics to 2 decimals"
+    "print(final_model_evaluation.round(2))  # round metrics to 2 decimals"
    ]
   },
   {
@@ -2194,7 +2194,7 @@
     "\n",
     "# Save final model\n",
     "with open(\"models/final_model.pkl\", \"wb\") as file:\n",
-    "    pickle.dump(xgb, file)"
+    "    pickle.dump(final_model, file)"
    ]
   },
   {
