--- a/machine_learning_template.ipynb
+++ b/machine_learning_template.ipynb
@@ -54,7 +54,8 @@
     "from sklearn.ensemble import RandomForestRegressor\n",
     "from sklearn.neural_network import MLPRegressor\n",
     "import xgboost as xgb\n",
-    "import pickle"
+    "import pickle\n",
+    "import os"
    ]
   },
   {
@@ -2188,6 +2189,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Create models directory if it doesn't exist\n",
+    "os.makedirs(\"models\", exist_ok=True)\n",
+    "\n",
     "# Save column transformer \n",
     "with open(\"models/column_transformer.pkl\", \"wb\") as file:\n",
     "    pickle.dump(column_transformer, file)\n",
