In machine_learning_template.ipynb, in Modeling > Regression > Final Model > Saving Model, implement exception handling

--- a/machine_learning_template.ipynb
+++ b/machine_learning_template.ipynb
@@ -2193,12 +2193,20 @@
     "os.makedirs(\"models\", exist_ok=True)\n",
     "\n",
     "# Save column transformer \n",
-    "with open(\"models/column_transformer.pkl\", \"wb\") as file:\n",
-    "    pickle.dump(column_transformer, file)\n",
-    "\n",
+    "try:\n",
+    "    with open(\"models/column_transformer.pkl\", \"wb\") as file:\n",
+    "        pickle.dump(column_transformer, file)\n",
+    "    print(\"Column transformer saved successfully\")\n",
+    "except Exception as e:\n",
+    "    print(f\"An error occurred while saving the column transformer: {e}}\")\n",
+    "    \n",
     "# Save final model\n",
-    "with open(\"models/final_model.pkl\", \"wb\") as file:\n",
-    "    pickle.dump(final_model, file)"
+    "try:\n",
+    "    with open(\"models/final_model.pkl\", \"wb\") as file:\n",
+    "        pickle.dump(final_model, file)\n",
+    "    print(\"Final model saved successfully\")\n",
+    "except Exception as e:\n",
+    "    print(f\"An error occurred while saving the final model: {e}}\")"
    ]
   },
   {
