In machine_learning_template.ipynb, in Modeling > Regression > Final Model, add subsection for feature importance with XGBoost feature importance plot

--- a/machine_learning_template.ipynb
+++ b/machine_learning_template.ipynb
@@ -2175,6 +2175,55 @@
   },
   {
    "cell_type": "markdown",
+   "id": "652cd43e-206f-464e-a2f8-06f3c641a06f",
+   "metadata": {},
+   "source": [
+    "#### Feature Importance "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "83c656ef-62d4-4836-b919-c85e8549c92d",
+   "metadata": {},
+   "source": [
+    "XGBoost Feature Importance Plot:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "52b47507-6281-4a28-961c-5dc8db8e01ce",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Mapping of feature names for better readability\n",
+    "feature_mapping = {\n",
+    "    \"f0\": \"feature_1\",\n",
+    "    \"f1\": \"feature_2\",\n",
+    "    \"f2\": \"feature_3\",\n",
+    "    \"f3\": \"feature_4\",\n",
+    "    \"f4\": \"feature_5\",\n",
+    "    \"f5\": \"feature_6\",\n",
+    "    \"f6\": \"feature_7\",\n",
+    "    \"f7\": \"feature_8\",\n",
+    "    \"f8\": \"feature_9\",\n",
+    "    \"f9\": \"feature_10\"\n",
+    "}\n",
+    "\n",
+    "# Create feature importance plot of the top 10 features\n",
+    "# Note: final_model must be an XGBoost model\n",
+    "xgb.plot_importance(final_model, max_num_features=10)\n",
+    "\n",
+    "# Map the feature names\n",
+    "plt.gca().set_yticklabels([feature_mapping.get(label.get_text(), label.get_text()) \n",
+    "                           for label in plt.gca().get_yticklabels()])\n",
+    "\n",
+    "# Show the plot\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "661472f1-6c53-4270-a381-f96641708735",
    "metadata": {},
    "source": [
