--- a/machine_learning_template.ipynb
+++ b/machine_learning_template.ipynb
@@ -53,6 +53,7 @@
     "from sklearn.svm import SVR\n",
     "from sklearn.ensemble import RandomForestRegressor\n",
     "from sklearn.neural_network import MLPRegressor\n",
+    "from xgboost import XGBRegressor\n",
     "import xgboost as xgb\n",
     "import pickle\n",
     "import os"
